tests/lean/770.hlean.expected.out
770.hlean:16:18: error: function expected at
  n
